--- a/index.html
+++ b/index.html
@@ -11,3 +11,16 @@
 </body>
 </html>
 <link rel="stylesheet" href="styles.css">
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sociumus</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <h1>Sociumus</h1>
+    <p>Это мой первый сайт на GitHub Pages.</p>
+</body>
+</html>
